[package]
name = "actix_chat_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-web-actors = "3.0.0"
actix = "0.10.0"

serde= "1"
serde_json = "1"

uuid = { version = "0.8", features = ["serde", "v4"] }

lazy_static = "1.4.0"